1/15/14 new screen icons from YY
1/15/14 constrain pH to valid range when dragging the graph indicators
1/15/14 make graph indicators look disabled (using opacity) when value is zero
1/15/14 GraphIndicatorNode: replace multiple options with isInteractive
1/14/14 Custom: first attempt at making graph indicators interactive, has some range problems
1/14/14 throw an Error when attempting to construct a Solute with a pH value that is out of range
1/14/14 use linkAttribute to wire up view properties that control visibility
1/14/14 use 'children' option to add nodes to each ScreenView's rootNode
1/14/14 rename Solution.drain to drainSolution for clarify as call sites
1/14/14 make RatioNode responsible for its own positioning
1/14/14 expand touchArea for picker in 'Custom' pH meter
1/14/14 fix: show 'Solutions' pH meter pointer only if meter is expanded
1/14/14 add option.emptyWhenSoluteChanges to Solution, needed for 'Custom' screen where a new custom solute is created as the pH changes
1/14/14 MAJOR CHANGE: make Solute immutable, change pH of 'custom' solution by creating new Solute instances when the pH changes
1/14/14 bug fix in BasicsPHMeterNode, 'enabled' fill was null
1/14/14 factor out PHScaleColors.PANEL_FILL, color for all panels and expand/collapse bars
1/13/14 integrate NumberPicker into CustomPHMeterNode
1/13/14 ditch ExpandCollapseBar in CustomMeterNode, implement something specific to what's needed
1/13/14 ditch ExpandCollapseBar in SolutionsMeterNode, implement something specific to what's needed
1/13/14 change requests for graphs
1/13/14 use light gray for pH meters and expand/collapse bars, adjust colors and strokes
1/13/14 Solutions: move units AB-switch into expand/collapse bar
1/13/14 Solutions: move expand/collapse bar into SolutionsGraphNode
1/9/14 Custom: add expand/collapse feature to pH meter
1/9/14 generalize ExpandCollapseBar so that it title can be any scenery.Node
1/9/14 move expand/collapse bar instance into SolutionsPHMeterNode