@@ -10,7 +10,7 @@ define( function( require ) {
 
   // imports
   var inherit = require( 'PHET_CORE/inherit' );
-  var GraphIndicatorNode = require( 'PH_SCALE/common/view/graph/GraphIndicatorNode' );
+  var GraphIndicator = require( 'PH_SCALE/common/view/graph/GraphIndicator' );
   var OHMoleculeNode = require( 'PH_SCALE/common/view/OHMoleculeNode' );
   var HTMLText = require( 'SCENERY/nodes/HTMLText' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
@@ -21,12 +21,12 @@ define( function( require ) {
    * @param {*} options
    * @constructor
    */
-  function H2OIndicatorNode( valueProperty, options ) {
+  function OHIndicator( valueProperty, options ) {
     options = _.extend( { pointerLocation: 'topLeft' }, options );
     var thisNode = this;
     var labelNode = new HTMLText( 'OH<sup>-</sup>', { font: new PhetFont( 28 ), fill: 'white' } );
-    GraphIndicatorNode.call( thisNode, valueProperty, new OHMoleculeNode(), labelNode, PHScaleColors.BASIC, options );
+    GraphIndicator.call( thisNode, valueProperty, new OHMoleculeNode(), labelNode, PHScaleColors.BASIC, options );
   }
 
-  return inherit( GraphIndicatorNode, H2OIndicatorNode );
+  return inherit( GraphIndicator, OHIndicator );
 } );
